--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==3.3.0
 appnope==0.1.2
 argon2-cffi==20.1.0
+asgiref==3.4.1
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
@@ -14,6 +15,7 @@ decorator==5.0.9
 defusedxml==0.7.1
 distlib==0.3.2
 dj-database-url==0.5.0
+Django==3.2.8
 entrypoints==0.3
 filelock==3.0.12
 gunicorn==20.1.0
@@ -65,6 +67,7 @@ requests-unixsocket==0.2.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
+sqlparse==0.4.2
 terminado==0.11.1
 testpath==0.5.0
 tornado==6.1
