--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,11 @@
-anyio==3.3.0
-appnope==0.1.2
-argon2-cffi==20.1.0
 asgiref==3.4.1
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-backports.entry-points-selectable==1.1.0
-bleach==4.1.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-distlib==0.3.2
 dj-database-url==0.5.0
 Django==3.2.8
-entrypoints==0.3
-filelock==3.0.12
+djangorestframework==3.12.4
 gunicorn==20.1.0
-idna==3.2
-ipykernel==6.2.0
-ipython==7.27.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.1
-json5==0.9.6
-jsonschema==3.2.0
-jupyter-client==7.0.1
-jupyter-core==4.7.1
-jupyter-server==1.10.2
-jupyterlab==3.1.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.7.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclassic==0.3.1
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.3
-packaging==21.0
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==2.3.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
 psycopg2==2.9.1
 psycopg2-binary==2.9.1
-ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
 python-dotenv==0.19.1
-pytz==2021.1
-pyzmq==22.2.1
-redis==3.5.3
-requests==2.26.0
-requests-unixsocket==0.2.0
-Send2Trash==1.8.0
-six==1.16.0
-sniffio==1.2.0
+pytz==2021.3
 sqlparse==0.4.2
-terminado==0.11.1
-testpath==0.5.0
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.6
-virtualenv==20.7.2
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.1
 whitenoise==5.3.0
